--- a/public/index.html
+++ b/public/index.html
@@ -4,46 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Estadísticas de Números</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f3f4f6;
-      padding: 2rem;
-      color: #333;
-    }
-    h1 {
-      color: #1f2937;
-    }
-    .card {
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      padding: 1.5rem;
-      margin-bottom: 1.5rem;
-    }
-    button {
-      padding: 0.5rem 1rem;
-      margin: 0.3rem;
-      font-size: 1rem;
-      border: none;
-      border-radius: 5px;
-      background-color: #3b82f6;
-      color: white;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #2563eb;
-    }
-    #resultados {
-      margin-top: 1rem;
-    }
-    input[type="number"] {
-      padding: 0.5rem;
-      margin-right: 0.5rem;
-      font-size: 1rem;
-      width: 100px;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Estadísticas de Números</h1>
@@ -97,7 +58,6 @@
         document.getElementById('salida').textContent = JSON.stringify(data, null, 2);
         document.getElementById('numero').value = '';
 
-        // Actualizar automáticamente la lista de números
         ejecutarServicio('api/numeros/entrada');
 
       } catch (error) {
